# ai-free-update-scrape

./: .env.example  .gitignore  CODEX_PROMPT.md  DESIGN.md  README.md  SPEC.md  design-qa.md  pyproject.toml  run.py  run_dashboard.py  run_research.py  skills-lock.json
.magicpath/night-shift/: magicpath-code.json
.magicpath/signal-console/: magicpath-code.json
.magicpath/signal-garden/: magicpath-code.json
.playwright-cli/: page-2026-07-15T23-18-21-833Z.yml  page-2026-07-15T23-18-45-239Z.yml  page-2026-07-15T23-20-16-753Z.yml  page-2026-07-16T09-29-50-947Z.yml  page-2026-07-16T09-34-17-603Z.yml  page-2026-07-16T09-35-00-826Z.yml  page-2026-07-16T09-42-41-522Z.yml  page-2026-07-16T09-43-12-538Z.yml  page-2026-07-16T09-44-21-306Z.yml  page-2026-07-16T09-52-04-409Z.yml  page-2026-07-16T09-52-36-052Z.yml  page-2026-07-16T09-53-35-271Z.yml
.pytest_dense_console/test_source_cycle_does_not_rep0/: audit_queue.json
.pytest_dense_console/test_source_cycle_replaces_act0/: audit_queue.json
.pytest_dense_console/test_workspace_journal_and_tem0/: workspace.json
.pytest_diverse_discovery/test_source_cycle_does_not_rep0/: audit_queue.json  sources.yaml
.pytest_diverse_discovery/test_source_cycle_replaces_act0/: audit_queue.json  (+1 more)
config/: categories.json  content_strategy.yaml  dashboard.json  personal_use_cases.yaml  sources.yaml
data/: audit_queue.json  ledger.jsonl  source_registry.json  workspace.json
docs/: content-intelligence-operator-guide.md  fiverr-yt-auto-proof-pack.md  frontend-element-audit.md  remotion-signal-brief-template.md  signal-console-code-guide.md  telemetry-schema.md  thread-context.json  thread-context.md  yt-auto-mcp-operator-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/: __init__.py  catalog.py  categories.py  content_intelligence.py  providers.py  research.py  schedule.py  session.py  source_cycle.py  yt_auto_mcp.py
tests/: test_content_intelligence.py  test_control_center.py
(+185 files in other folders)
