[project]
name = "ai-free-update-scrape"
version = "0.1.0"
description = "AI news scraper + free tool ranker + open-source radar"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "ollama>=0.2",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
scrape = "ai_free_update_scrape.schedule:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_free_update_scrape"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
