[project]
name = "ai-free-update-scrape"
version = "0.1.0"
description = "AI news scraper + free tool ranker + open-source radar"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "flask>=3.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "openai>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
scrape = "ai_free_update_scrape.schedule:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_free_update_scrape"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://mirrors.aliyun.com/pypi/simple/"]
